<resources>
    <string name="app_name">RGBGuesser</string>
    <string name="color">Color</string>
    <string name="score">Score:</string>
    <string name="rgb">RGB Guesser</string>
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="game_over">Game Over</string>
    <string name="your_score">Your Score:</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="success">You have made it to the High Scores list! Enter your name!</string>
    <string name="submit">Submit</string>
    <string name="player1">Player1</string>
    <string name="example_score">900</string>
    <string name="example_place">1.</string>
    <string name="rgb_open">RGB(</string>
    <string name="colon">,</string>
    <string name="rgb_close">)</string>
</resources>
