<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:paddingTop="8dip"
    android:paddingBottom="8dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip">

    <TextView
        android:id="@+id/HighScorePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:textSize="20sp"
        tools:text="@string/example_place"/>

    <TextView
        android:id="@+id/HighScoreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:textSize="20sp"
        tools:text="@string/player1"/>

    <TextView
        android:id="@+id/HighScoreScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="@string/example_score"/>

</LinearLayout>